--- a/chain/actors/builtin/power/state.go.template
+++ b/chain/actors/builtin/power/state.go.template
@@ -15,6 +15,10 @@ import (
 	"github.com/filecoin-project/lotus/chain/actors/builtin"
 	"github.com/filecoin-project/go-state-types/manifest"
 
+{{if (ge .v 3)}}
+	hamt "github.com/filecoin-project/go-hamt-ipld/v3"
+{{end}}
+
 {{if (le .v 7)}}
     {{if (ge .v 3)}}
         builtin{{.v}} "github.com/filecoin-project/specs-actors{{.import}}actors/builtin"
@@ -189,6 +193,38 @@ func (s *state{{.v}}) SetThisEpochRawBytePower(p abi.StoragePower) error {
 
 func (s *state{{.v}}) GetState() interface{} {
 	return &s.State
+}
+
+func (s *state{{.v}}) DiffClaims(other State) (*ClaimChanges, error) {
+	{{if (ge .v 3)}}
+       	if o, ok := other.(*state{{.v}}); ok {
+        	diff, err := hamt.Diff(s.store.Context(), s.store, o.store, s.Claims, o.Claims, append(adt{{.v}}.DefaultHamtOptions, hamt.UseTreeBitWidth(builtin{{.v}}.DefaultHamtBitwidth))...)
+        	if err != nil {
+        		return nil, err
+        	}
+        	differ := claimDiffer{
+        		pre: s,
+        		after: o,
+        	}
+        	for _, change := range diff {
+        		switch change.Type {
+        		case hamt.Add:
+        			err = differ.Add(change.Key, change.After)
+        		case hamt.Remove:
+        			err = differ.Remove(change.Key, change.Before)
+        		case hamt.Modify:
+        			err = differ.Modify(change.Key, change.Before, change.After)
+        		default:
+        			panic("impossible change type")
+        		}
+        		if err != nil {
+        			return nil, err
+        		}
+        	}
+        	return differ.Results, nil
+       	}
+	{{end}}
+	return DiffClaims(s, other)
 }
 
 func (s *state{{.v}}) claims() (adt.Map, error) {
