do it correctly

--- a/chain/actors/builtin/power/state.go.template
+++ b/chain/actors/builtin/power/state.go.template
@@ -202,7 +202,8 @@ func (s *state{{.v}}) DiffClaims(other State) (*ClaimChanges, error) {
         	if err != nil {
         		return nil, err
         	}
-        	differ := claimDiffer{
+		differ := claimDiffer{
+			Results: new(ClaimChanges),
         		pre: s,
         		after: o,
         	}
