--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,19 +1,17 @@
 name: Docker
 
+# TODO(p2): Restore worfklow_dispatch trigger
 on:
   push:
     branches:
       - master
-      - release/*
     tags:
       - v*
+  pull_request:
+    branches:
+      - master
   schedule:
     - cron: '0 0 * * *'
-  workflow_dispatch:
-    inputs:
-      ref:
-        description: The GitHub ref (e.g. refs/tags/v1.0.0) to release
-        required: false
 
 defaults:
   run:
@@ -24,7 +22,7 @@ permissions:
 
 jobs:
   docker:
-    name: Docker (${{ matrix.image }} / ${{ matrix.network }}) [publish=${{ (inputs.ref || github.ref) == 'refs/heads/master' || startsWith(inputs.ref || github.ref, 'refs/tags/') }}]
+    name: Docker (${{ matrix.image }} / ${{ matrix.network }}) [publish=${{ github.event_name != 'pull_request' }}]
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -40,13 +38,13 @@ jobs:
           - image: lotus
             network: mainnet
     env:
-      PUBLISH: ${{ github.ref == 'refs/heads/master' || startsWith(inputs.ref || github.ref, 'refs/tags/') }}
+      PUBLISH: ${{ github.event_name != 'pull_request' }}
     steps:
       - id: channel
         env:
-          IS_MASTER: ${{ (inputs.ref || github.ref) == 'refs/heads/master' }}
-          IS_TAG: ${{ startsWith(inputs.ref || github.ref, 'refs/tags/') }}
-          IS_RC: ${{ contains(inputs.ref || github.ref, '-rc') }}
+          IS_MASTER: ${{ github.ref == 'refs/heads/master' }}
+          IS_TAG: ${{ startsWith(github.ref, 'refs/tags/') }}
+          IS_RC: ${{ contains(github.ref, '-rc') }}
           IS_SCHEDULED: ${{ github.event_name == 'schedule' }}
         run: |
           channel=''
@@ -67,12 +65,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-          ref: ${{ inputs.ref || github.ref }}
       - id: git
-        env:
-          REF: ${{ inputs.ref || github.ref }}
         run: |
-          ref="${REF#refs/heads/}"
+          ref="${GITHUB_REF#refs/heads/}"
           ref="${ref#refs/tags/}"
           sha="$(git rev-parse --short HEAD)"
           echo "ref=$ref" | tee -a "$GITHUB_OUTPUT"
@@ -86,7 +81,7 @@ jobs:
           images: filecoin/${{ matrix.image }}
           tags: |
             type=raw,enable=${{ steps.channel.outputs.channel != '' }},value=${{ steps.channel.outputs.channel }}
-            type=raw,enable=${{ startsWith(inputs.ref || github.ref, 'refs/tags/') }},value=${{ steps.git.outputs.ref }}
+            type=raw,enable=${{ startsWith(github.ref, 'refs/tags/') }},value=${{ steps.git.outputs.ref }}
             type=raw,value=${{ steps.git.outputs.sha }}
           flavor: |
             latest=false
