--- a/.github/workflows/sorted-pr-checks.yml
+++ b/.github/workflows/sorted-pr-checks.yml
@@ -22,13 +22,13 @@ permissions:
   pull-requests: write
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.inputs.pull_number || github.event.workflow_run.pull_requests[0].number }}
+  group: ${{ github.workflow }}-${{ github.event.inputs.pull_number }}-${{ github.event.workflow_run.id }}
   cancel-in-progress: true
 
 jobs:
   comment:
     if: github.event.inputs.pull_number || github.event.workflow_run.event == 'pull_request'
-    uses: ipdxco/sorted-pr-checks/.github/workflows/comment.yml@v1
+    uses: ipdxco/sorted-pr-checks/.github/workflows/comment.yml@v2
     with:
-      pull_number: ${{ github.event.inputs.pull_number || github.event.workflow_run.pull_requests[0].number }}
+      pull_number: ${{ github.event.inputs.pull_number }}
       template: unsuccessful_only
