feat: ci: control the use of self-hosted runners with CUSTOM_RUNNERS_ENABLED configuration variable

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,7 @@ jobs:
           submodules: 'recursive'
       - id: test
         env:
+          custom-runners-enabled: ${{ vars.CUSTOM_RUNNERS_ENABLED || 'false' }}
           # Unit test groups other than unit-rest
           utests: |
             [
@@ -157,7 +158,9 @@ jobs:
           groups="$(jq -n --argjson i "$itests" --argjson u "$utests" --argjson r "$rest" --argjson o "$otests" '$i + $u + [$r] + $o')"
 
           # Apply custom runner labels to the groups
-          groups="$(jq -n --argjson g "$groups" --argjson r "$runners" '$g | map(. + {"runner": (.name as $n | $r | .[$n]) })')"
+          if [[ "$custom-runners-enabled" == "true" ]]; then
+            groups="$(jq -n --argjson g "$groups" --argjson r "$runners" '$g | map(. + {"runner": (.name as $n | $r | .[$n]) })')"
+          fi
 
           # Apply the needs_yugabytedb flag to the groups
           groups="$(jq -n --argjson g "$groups" --argjson y "$yugabytedb" '$g | map(. + {"needs_yugabytedb": ([.name] | inside($y)) })')"
@@ -235,7 +238,7 @@ jobs:
   test:
     needs: [discover, cache]
     name: Test (${{ matrix.name }})
-    runs-on: ${{ github.repository == 'filecoin-project/lotus' && matrix.runner || 'ubuntu-latest' }}
+    runs-on: ${{ matrix.runner || 'ubuntu-latest' }}
     strategy:
       fail-fast: false
       matrix:
