--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -2,11 +2,11 @@
 # TODO(p0): Test if templating on boolean values is supported
 
 version: 2
-project_name: lotus
+project_name: "{{ .Env.PROJECT_NAME }}"
 universal_binaries:
   - id: lotus
     replace: true
-    name_template: lotus
+    name_template: "{{ .Env.PROJECT_NAME }}"
 builds:
   - id: lotus
     binary: lotus
@@ -23,7 +23,7 @@ builds:
       - goos: linux
         goarch: arm64
     prebuilt:
-      path: '{{ .Env.GITHUB_WORKSPACE }}/{{ .Os }}_{{ .Arch }}{{ with .Amd64 }}_{{ . }}{{ end }}/lotus'
+      path: "{{ .Env.GITHUB_WORKSPACE }}/{{ .Os }}_{{ .Arch }}{{ with .Amd64 }}_{{ . }}{{ end }}/lotus"
     skip: true
   - id: lotus-miner
     binary: lotus-miner
@@ -40,7 +40,7 @@ builds:
       - goos: linux
         goarch: arm64
     prebuilt:
-      path: '{{ .Env.GITHUB_WORKSPACE }}/{{ .Os }}_{{ .Arch }}{{ with .Amd64 }}_{{ . }}{{ end }}/lotus-miner'
+      path: "{{ .Env.GITHUB_WORKSPACE }}/{{ .Os }}_{{ .Arch }}{{ with .Amd64 }}_{{ . }}{{ end }}/lotus-miner"
     skip: true
   - id: lotus-worker
     binary: lotus-worker
@@ -57,14 +57,13 @@ builds:
       - goos: linux
         goarch: arm64
     prebuilt:
-      path: '{{ .Env.GITHUB_WORKSPACE }}/{{ .Os }}_{{ .Arch }}{{ with .Amd64 }}_{{ . }}{{ end }}/lotus-worker'
+      path: "{{ .Env.GITHUB_WORKSPACE }}/{{ .Os }}_{{ .Arch }}{{ with .Amd64 }}_{{ . }}{{ end }}/lotus-worker"
     skip: true
 archives:
   - id: primary
     format: tar.gz
     wrap_in_directory: true
-    name_template: |
-      lotus{{ if ne .Env.PROJECT "node" }}-{{ .Env.PROJECT }}{{ end }}_v{{ .Env.VERSION }}_{{ .Os }}_{{ .Arch }}
+    name_template: "{{ .Env.PROJECT_NAME }}_v{{ .Env.VERSION }}_{{ .Os }}_{{ .Arch }}"
     files:
       # this is a dumb but required hack so it doesn't include the default files
       # https://github.com/goreleaser/goreleaser/issues/602
@@ -84,34 +83,30 @@ release:
   tag: "{{ .Env.TAG }}"
   target_commitish: "{{ .Env.TARGET_COMMITISH }}"
 brews:
-  - name: |
-      lotus{{ if ne .Env.PROJECT "node" }}-{{ .Env.PROJECT }}{{ end }}"
+  - name: "{{ .Env.PROJECT_NAME }}"
     repository:
       owner: filecoin-project
       name: homebrew-lotus
       branch: master
     ids:
       - primary
-    custom_block: ""
     install: |
-      {{ if eq .Env.PROJECT "node" }}bin.install "lotus"{{ end }}
-      {{ if eq .Env.PROJECT "miner" }}bin.install "lotus-miner"{{ end }}
-      {{ if eq .Env.PROJECT "miner" }}bin.install "lotus-worker"{{ end }}
+      {{ if eq .Env.PROJECT_NAME "lotus" }}bin.install "lotus"{{ end }}
+      {{ if eq .Env.PROJECT_NAME "lotus-miner" }}bin.install "lotus-miner"{{ end }}
+      {{ if eq .Env.PROJECT_NAME "lotus-miner" }}bin.install "lotus-worker"{{ end }}
     test: |
-      {{ if eq .Env.PROJECT "node" }}system "#{bin}/lotus --version"{{ end }}
-      {{ if eq .Env.PROJECT "miner" }}system "#{bin}/lotus-miner --version"{{ end }}
-      {{ if eq .Env.PROJECT "miner" }}system "#{bin}/lotus-worker --version"{{ end }}
+      {{ if eq .Env.PROJECT_NAME "lotus" }}system "#{bin}/lotus --version"{{ end }}
+      {{ if eq .Env.PROJECT_NAME "lotus-miner" }}system "#{bin}/lotus-miner --version"{{ end }}
+      {{ if eq .Env.PROJECT_NAME "lotus-miner" }}system "#{bin}/lotus-worker --version"{{ end }}
     directory: Formula
     homepage: "https://filecoin.io"
     description: "A homebrew cask for installing filecoin-project/lotus on MacOS"
     license: MIT
-    skip_upload: |
-      {{ if and (eq .Env.IS_DRAFT "false") (eq .Env.IS_LATEST "true") }}false{{ else }}true{{ end }}
+    skip_upload: true
     dependencies:
       - name: hwloc
 # produced manually so we can include cid checksums
 checksum:
   disable: true
 snapshot:
-  name_template: |
-    lotus{{ if ne .Env.PROJECT "node" }}-{{ .Env.PROJECT }}{{ end }}_v{{ .Env.VERSION }}
+  name_template: "{{ .Env.PROJECT_NAME }}_v{{ .Env.VERSION }}"
