--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -167,8 +167,8 @@ jobs:
             system "#{bin}/lotus --version"
         run: |
           yq -i '(.builds[] | select(.id == "lotus")).skip = false' '.goreleaser.yaml'
-          yq -i '.brews.install = env.BREW_INSTALL' '.goreleaser.yaml'
-          yq -i '.brews.test = env.BREW_TEST' '.goreleaser.yaml
+          yq -i '.brews[0].install = strenv(BREW_INSTALL)' '.goreleaser.yaml'
+          yq -i '.brews[0].test = strenv(BREW_TEST)' '.goreleaser.yaml
       - if: matrix.project == 'miner'
         env:
           BREW_INSTALL: |
@@ -179,8 +179,8 @@ jobs:
             system "#{bin}/lotus-worker --version"
         run: |
           yq -i '(.builds[] | select(.id == "lotus-miner" or .id == "lotus-worker")).skip = false' '.goreleaser.yaml'
-          yq -i '.brews.install = env.BREW_INSTALL' '.goreleaser.yaml'
-          yq -i '.brews.test = env.BREW_TEST' '.goreleaser.yaml'
+          yq -i '.brews[0].install = strenv(BREW_INSTALL)' '.goreleaser.yaml'
+          yq -i '.brews[0].test = strenv(BREW_TEST)' '.goreleaser.yaml'
       - uses: goreleaser/goreleaser-action@7ec5c2b0c6cdda6e8bbb49444bc797dd33d74dd8 # v5.0.0
         with:
           distribution: goreleaser-pro
